# ICP_Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
include/assets/: Mesh.hpp  Vertex.hpp  vertex.hpp
include/audio/: AudioManager.hpp
include/concurrency/: Pool.hpp  SyncedDeque.hpp
include/demos/Helloworld/: helloworld.hpp
include/demos/Static/: Static.hpp
include/recognizers/: FaceRecognizer.hpp  RedRecognizer.hpp
include/render/: Drawings.hpp  Model.hpp  ShaderProgram.hpp  SyncedTexture.hpp  Texture.hpp  Triangle.hpp  TriangleOld.hpp  drawings.hpp
include/runners/: GLApp.hpp  RasterApp.hpp  ThreadTrackApp.hpp  TrackApp.hpp
include/scenes/: IScene.hpp  ShooterScene.hpp  ViewerScene.hpp
include/utils/: Atlas.hpp  Camera.hpp  FileUtils.hpp  FpsMeter.hpp  GlDebugCallback.hpp  GlErrCallback.hpp  MeshGen.hpp  NonCopyable.hpp  OBJloader.hpp  PathUtils.hpp  Screenshot.hpp  Singleton.cpp  file_utils.hpp
resources/basic_sdr/: basic.frag  basic.vert
resources/texture_sdr/: tex.vert
source/: Project.cpp  Project.h  helloworld.cpp  main.cpp
source/Static/: Static.cpp  Static.hpp
source/audio/: AudioManager.cpp
source/demos/Helloworld/: helloworld.cpp
source/demos/Static/: Static.cpp
source/recognizers/: FaceRecognizer.cpp  RedRecognizer.cpp
source/render/: Drawings.cpp  ShaderProgram.cpp  SyncedTexture.cpp  Texture.cpp  Triangle.cpp  TriangleOld.cpp  drawing.cpp  drawings.cpp
source/runners/: GLApp.cpp  RasterApp.cpp  ThreadTrackApp.cpp  TrackApp.cpp
source/scenes/: ShooterScene.cpp  ViewerScene.cpp
source/utils/: GlDebugCallback.cpp  GlErrCallback.cpp  OBJloader.cpp  ShaderProgram.cpp
